--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,20 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "chromadb>=1.0.20",
     "fastapi[standard]>=0.116.1",
     "langchain-chroma>=0.2.5",
     "langchain-community>=0.3.27",
     "langchain-openai>=0.3.31",
+    "matplotlib>=3.10.5",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
+    "plotly>=6.3.0",
     "python-dotenv>=1.1.1",
+    "seaborn>=0.13.2",
+    "sentence-transformers>=5.1.0",
+    "torch>=2.8.0",
+    "torchaudio>=2.8.0",
+    "torchvision>=0.23.0",
     "transformers>=4.55.3",
 ]
