--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "chromadb>=1.0.20",
-    "fastapi[standard]>=0.116.1",
+    "fastapi[all,standard]>=0.116.1",
     "langchain-chroma>=0.2.5",
     "langchain-community>=0.3.27",
+    "langchain-huggingface>=0.3.1",
     "langchain-openai>=0.3.31",
+    "langchain-text-splitters>=0.3.9",
     "matplotlib>=3.10.5",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
@@ -21,4 +23,5 @@ dependencies = [
     "torchaudio>=2.8.0",
     "torchvision>=0.23.0",
     "transformers>=4.55.3",
+    "uvicorn[standard]>=0.35.0",
 ]
